Change QR code endpoint names
